--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "inventory-web",
+  "name": "stuff-web",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -44,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-dom": "^17.0.9",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.5.0",
     "eslint-config-airbnb": "18.2.0",
